# Zoraks_Fortress

./: .gitignore  README.md
src/: action_manager.py  common.py  helper.py  main.py
static/css/: style.css
templates/: game.html  map.html  notes.html
zoraks_fortress/: README.md  config.py  pyproject.toml  requirements.txt  run.py  setup.py
zoraks_fortress/app/: __init__.py  helper.py
zoraks_fortress/zorakapp/: __init__.py  common.py  helper.py  parser.py  views.py
zoraks_fortress/zorakapp/static/css/: style.css
zoraks_fortress/zorakapp/static/js/: scripts.js
zoraks_fortress/zorakapp/templates/: about.html  game.html  howto.html  map.html  notes.html  settings.html
zoraks_fortress/zorakapp/templates/base/: base_bottom.html  base_top.html
zoraks_fortress/zorakapp/templates/mockups/: map.html
zplanning/: Maze.xlsx  map words.xlsx  mapmaking4.xcf  pyg.py  ~$map words.xlsx
